Fixed Sonar Warnings.